cabal-version:      3.0
name:               while
version:            0.1.0.0

license:            MIT
license-file:       LICENSE
author:             Tommaso Pacciani
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  
        Examples,
        -- Bugs, 
        -- SmartConstructorsWhile
    other-modules:
        -- , SmartConstructorsWhile
        , While
        , DebugWhile
        , Programs.IncorrectMutex1
        , Programs.IncorrectMutex2
        , Programs.IncorrectMutex3
        , Programs.IncorrectMutex4
        , Programs.IncorrectMutex4
        , Programs.DiningPhilosophers
    build-depends:
        base ^>=4.17.2.1
        , containers >=0.5 && <0.7
        , transformers >= 0.5.2 && < 0.6
        , mtl          >= 2.2.1 && < 2.3
        , multiverse-debuging
    hs-source-dirs:   src, debug
    default-language: Haskell2010

executable while-debugger
    main-is: Main.hs
    hs-source-dirs: src
    build-depends:
        base >= 4.17.2.1 && < 5,
        containers >= 0.5 && < 0.7,
        transformers >= 0.5.2 && < 0.6,
        mtl >= 2.2.1 && < 2.3,
        multiverse-debuging
    other-modules:
        While,
        DebugWhile,
        Programs.IncorrectMutex1,
        Programs.IncorrectMutex2,
        Programs.IncorrectMutex3,
        Programs.IncorrectMutex4,
        Programs.DiningPhilosophers
    default-language: Haskell2010
    cpp-options: -D__GHCJS__
    default-extensions: CPP
    js-sources: src/js/utils.js src/js/thread-view-debugger.js